[package]
name = "lunar-lander"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/danaki/lunar-lander"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_asset = "0.13.2"
bevy_input = "0.13.2"
bevy_particle_systems = "0.12.0"
bevy_procedural_meshes = "0.13.1"
bevy_xpbd_2d = "0.4.2"
fart-utils = "0.4.0"
noise = "0.9.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
